--- a/app/assets/stylesheets/ie6.css
+++ b/app/assets/stylesheets/ie6.css
@@ -8,57 +8,25 @@
  * Properties with a child selector (>) or sibling selector (+) are for IE7 only.
  *
  */
+html{ padding:90px 0 30px 0;}
+#header,#lftnav,#content,#footer{ position:relative; top:0; right:0; bottom:0; left:0;}
+#header {margin-top:-90px;}
+#lftnav {height:100%;margin-top:0px; float:left;}
+#content {height:100%; margin:0px 0 0 160px;}
+#footer {margin-top:0px;}
 
+  
   body
   {
+    position:relative;
 /*    _text-align: center;*/ /* 1st part of IE5/IE6quirks centering hack */
   }
 
-  #page
-  {
-/*    _text-align: left;*/ /* 2nd part of IE5/IE6quirks centering hack */
-  }
 
-  #main
-  {
-    _zoom: 1; /* Otherwise with a liquid layout, sidebars disappear when resizing the windows in IE6 */
-  }
-
-/** floating divs **/
-  #content,
-  #navbar, .fl, .fr,
-  #sidebar-left,
-  #sidebar-right
-  {
-    _display: inline; /* display inline or double your floated margin! [1] */
-    _overflow: hidden; /* in ie6, overflow auto is broken [2] and so is overflow visible [3] */
-    _overflow-y: visible;
-  }
-
-
-/*
- * Tabs CSS
- */
-
-  ul.primary li a,
-  ul.primary li a .tab,
-  ul.secondary li a,
-  ul.secondary li a .tab
-  {
-    _display: inline; /* Otherwise the blocks mistakenly get 100% width in IE5 */
-    _di\splay: inline-block; /* Otherwise the blocks mistakenly get 100% width in IE6 */
-    cursor: pointer;
-  }
-
-  ul.primary,
-  ul.secondary
-  {
-    _width: 100%; /* Otherwise IE5 treats the ul as floated */
-    _w\idth: auto; /* Reset to auto width for IE6 */
-  }
   table {
-      border-collapse:collapse;
-      border-spacing:0;
+    width:auto;
+    border-collapse:collapse;
+    border-spacing:0;
   }
   th,td {
       padding: 0;
